--- a/2020.md
+++ b/2020.md
@@ -24,5 +24,6 @@
 - A sangre y fuego: Héroes, bestias y mártires de España - Manuel Chaves Nogales
 - The hitchhiker's guide to the galaxy (Ongoing) - Douglas Adams
 - No rules rules: Netflix and the culture of reinvention - Erin Meyer and Reed Hastings
-- The information: A history, a Theory, a Flood (Ongoing) - James Gleick
+- The information: A history, a Theory, a Flood - James Gleick
+- High Performance Browser Networking (Ongoing) -  Ilya Grigorik
 
