--- a/2020.md
+++ b/2020.md
@@ -22,8 +22,9 @@
 - The gene - Siddhartha Mukherjee
 - The winds of change and other stories - Isaac Asimov
 - A sangre y fuego: Héroes, bestias y mártires de España - Manuel Chaves Nogales
-- The hitchhiker's guide to the galaxy (Ongoing) - Douglas Adams
+- The hitchhiker's guide to the galaxy - Douglas Adams
 - No rules rules: Netflix and the culture of reinvention - Erin Meyer and Reed Hastings
 - The information: A history, a Theory, a Flood - James Gleick
-- High Performance Browser Networking (Ongoing) -  Ilya Grigorik
-
+- High Performance Browser Networking -  Ilya Grigorik
+- The great ideas - Mortimer J. Adler
+- Dune (ongoing) - Frank Herbert
