--- a/2021.md
+++ b/2021.md
@@ -4,3 +4,7 @@
 - Sandworm: A New Era of Cyberwar and the Hunt for the Kremlin's Most Dangerous Hackers - Andy Greenberg
 - The Bitcoin standard - Saifedean Ammous
 - Wetware: A compute in every living cell (ongoing) - Dennis Bray
+- Deep Work - Cal Newport
+- World Order: Reflections on the Character of nations and the course of history - Henry Kissinger
+- Liftoff - Eric Berger
+- The three-body problem - Cixin Liu
